# netlist

./: .gitignore  .travis.yml  stack.yaml
netlist/: README.md  netlist.cabal
netlist-to-verilog/: README.md  netlist-to-verilog.cabal
netlist-to-verilog/Language/Netlist/: GenVerilog.hs
netlist-to-vhdl/: README.md  netlist-to-vhdl.cabal
netlist-to-vhdl/Language/Netlist/: GenVHDL.hs
netlist/Language/Netlist/: AST.hs  Examples.hs
verilog/: README.md  verilog.cabal
verilog/Language/Verilog/: PrettyPrint.hs
verilog/Language/Verilog/Syntax/: AST.hs  Expression.hs
