name:               netlist-to-verilog
version:            0.1.2
synopsis:           Convert a Netlist AST to a Verilog AST
description:        Convert a Netlist AST to a Verilog AST
category:           Language
license:            BSD3
license-file:       LICENSE
copyright:          Copyright (c) 2010 Signali Corp.
                    Copyright (c) 2010 Philip Weaver
author:             Philip Weaver
maintainer:         philip.weaver@gmail.com
package-url:        git://github.com/pheaver/netlist-verilog.git
build-type:         Simple
cabal-version:      >=1.6
extra-source-files: README.md

Library
  ghc-options:          -Wall

  exposed-modules:      Language.Netlist.GenVerilog

  build-depends:        netlist >= 0.2, base == 4.*, verilog == 0.2
