name:               netlist-to-vhdl
version:            0.3.3
synopsis:           Convert a Netlist AST to VHDL
description:        Convert a Netlist AST to VHDL
category:           Language
license:            BSD3
license-file:       LICENSE
copyright:          Copyright (c) 2010 University of Kansas
author:             Garrin Kimmell
maintainer:         garrin.kimmell@gmail.com
package-url:        git://github.com/ku-fpg/netlist.git
build-type:         Simple
cabal-version:      >=1.6
extra-source-files: README.md

Library
  ghc-options:          -Wall

  exposed-modules:      Language.Netlist.GenVHDL

  build-depends:        netlist >= 0.3.1 && < 0.4, base == 4.*, pretty >= 1.0

source-repository head
  type:     git
  location: git://github.com/ku-fpg/netlist.git

source-repository this
  type:     git
  location: git://github.com/ku-fpg/netlist.git
  tag:      netlist-to-vhdl-0.3.2
