name:               verilog
version:            0.2
synopsis:           Verilog AST and pretty printer
description:        Verilog AST and pretty printer -- parser to come later
category:           Language
license:            BSD3
license-file:       LICENSE
copyright:          Copyright (c) 2010 Signali Corp.
                    Copyright (c) 2010 Philip Weaver
author:             Philip Weaver
maintainer:         philip.weaver@gmail.com
package-url:        git://github.com/pheaver/netlist-verilog.git
build-type:         Simple
cabal-version:      >=1.6
extra-source-files: README.md

Library
  ghc-options:          -Wall

  exposed-modules:      Language.Verilog.Syntax,
                        Language.Verilog.Syntax.Expression,
                        Language.Verilog.Syntax.Ident,
                        Language.Verilog.Syntax.AST,
                        Language.Verilog.Parser,
                        Language.Verilog.PrettyPrint,
                        Language.Verilog

  build-depends:      base == 4.*, syb, binary, pretty, parsec == 3.*, mtl
